--- a/style.css
+++ b/style.css
@@ -1,10 +1,25 @@
+.flex {
+  display: flex;
+}
+
 .slidecontainer {
   width: 100%; /* Width of the outside container */
+}
+.clear {
+  margin-top: 7%;
+  padding-bottom: 0%;
+  margin-bottom: 5%;
+}
+.checkbox {
+  margin: 5%;
+  margin-left: 32%;
 }
 
 .color {
   margin-top: 10%;
-  margin-left: 15%;
+  margin-bottom: 0%;
+  margin-left: 3%;
+  width: 93%;
 }
 
 .letter {
@@ -13,19 +28,18 @@
 
 /* The slider itself */
 .slider {
-  -webkit-appearance: none;  /* Override default CSS styles */
+  -webkit-appearance: none; /* Override default CSS styles */
   appearance: none;
   width: 100%; /* Full-width */
-  height: 25px; /* Specified height */
+  /* height: 25px; Specified height */
   background: #d3d3d3; /* Grey background */
   outline: none; /* Remove outline */
   opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
-  transition: opacity .2s;
+  -webkit-transition: 0.2s; /* 0.2 seconds transition on hover */
+  transition: opacity 0.2s;
 }
 
 /* Mouse-over effects */
-.slider:hover .color:hover{
+.slider:hover .color:hover {
   opacity: 1; /* Fully shown on mouse-over */
 }
-
